--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '3.7'
 
 networks:
-  app-tier:
-    driver: bridge
+  ts_net:
+    external:
+      name: ts_net
 
 services:
   rabbitmq:
     image: bitnami/rabbitmq:latest
+    hostname: rabbitmq
     environment:
       - RABBITMQ_USERNAME=admin
       - RABBITMQ_PASSWORD=Welcome1#
@@ -16,7 +18,7 @@ services:
     volumes:
       - .:/bitnami
     networks:
-      - app-tier
+      - ts_net
   telegram:
     build: .
     container_name: telegram
@@ -25,8 +27,7 @@ services:
     depends_on:
       - rabbitmq
     restart: on-failure
-    #    command: /bin/sh -c ./docker-entrypoint.sh
     volumes:
       - .:/telegram-sync:rw
     networks:
-      - app-tier
+      - ts_net
