--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,19 @@ services:
   telegram:
     build: .
     container_name: telegram
+    environment:
+      - RABBITMQ_USERNAME=admin
+      - RABBITMQ_PASSWORD=Welcome1#
+      - RABBITMQ_QUEUE_NAME=telegram
+      - MSSQL_SERVER=172.22.0.2
+      - MSSQL_PORT=1433
+      - MSSQL_DATABASE=telegramdb
+      - MSSQL_USERNAME=sa
+      - MSSQL_PASSWORD=Pass*123
+      - SERVER_HOST=0.0.0.0
+      - SERVER_PORT=52004
     ports:
-      - 9888:9888
+      - 52004:52004
     depends_on:
       - rabbitmq
     restart: on-failure
